k8s/photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  ports:
    - port: 2342
  selector:
    app: photoprism
  type: ClusterIP
